[tool.poetry]
name = "backend-tutorial"
version = "0.1.0"
description = ""
authors = ["SIGIRACE <chickang9@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "backend_tutorial"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
mysqlclient = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
